--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -5,5 +5,6 @@
     "password" : "Mot de passe",
     "carlist" : "Liste des voitures",
     "logout" : "Deconnexion",
-    "addCar" : "Ajouter une voiture" 
+    "addCar" : "Ajouter une voiture" ,
+    "listcars" : "Liste des voitures"
 }
