--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,5 +1,6 @@
 {
     "welcome" : "Welcome",
+    "home" : "Home",
     "login" : "Login", 
     "adressEmail" : "E-mail address",
     "password" : "Password",
